--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
     <div>   
         <div class="logo">
-            <img src="assets/images/logo.png" width="200"/>
+            <h1>
+                Wikipedia
+            <img src="assets/img/wikipedia.png" width="50"style="float: left;"/>
+        </h1>
+       
         </div>
     </div>
 
@@ -26,6 +30,9 @@
         </div>
 
         <div class="main">
+
+            <h1>Game of Thrones</h1>
+            <p></p>
             
         </div>
 
