--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Principal</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="asserts/css/style.css">
 </head>
 <body>
 
     <div>   
         <div class="logo">
-            <img src="assets/images/logo.png" width="200"/>
+            <img src="asserts/img/wikipedia.png" width="100"/>
         </div>
     </div>
 
@@ -19,15 +19,32 @@
 
     <div class="content">
         <div class="sidebar">
-            <h2>Título</h2>
+            <h2>Filmes e Series</h2>
             <ul>
-                <li><a href="#">Links</a></li>
+                <li><a href="#">Game of Thrones</a></li>
             </ul>
         </div>
 
         <div class="main">
-            
+            <h1>Tudo Sobre Game of Thrones</h1>
+
+            <p>Game of Thrones é uma série de televisão norte-americana criada por David Benioff e D. B. Weiss, baseada na série de livros A Song of Ice and Fire de George R. R. Martin.[1] Eleita como a melhor série de TV do século XXI em 2020, numa votação popular feita pela revista Digital Spy,[2] Game of Thrones foi transmitida originalmente pelo canal HBO entre 17 de abril de 2011 a 19 de maio de 2019.[3][4] No elenco principal estão Peter Dinklage, Nikolaj Coster-Waldau, Lena Headey, Emilia Clarke, Iain Glen, Michelle Fairley, Richard Madden, Kit Harington, Sophie Turner, Maisie Williams, Isaac Hempstead Wright, entre outros.</p>
+
+            <h2>Sinopse</h2>
+            <p>A série entrou para o Livro de Recordes como a série dramática com a maior transmissão simultânea ao redor do mundo. O número foi alcançado graças ao segundo episódio da quinta temporada, intitulado "The House of Black and White".[18] Na sexta temporada da série, a emissora HBO decidiu produzir um talk show para Game of Thrones, chamado After the Thrones, assim como a emissora AMC fez com a série Breaking Bad, produzindo um talk show chamado Talking Bad. Com o mesmo formato de Thronecast e Talking Dead, o programa After the Thrones apresentava recapitulações, comentários e teorias de Game of Thrones e foi exibido nas segundas-feiras pela HBO Now, HBO Go, HBO on Demand e pela própria emissora HBO.</p>
+
+
+            <h2>Produção</h2>
+            <p>Em janeiro de 2006, David Benioff revelou que desde pequeno se considerava fã de ficção fantástica, e puxou conversa por telefone com o representante de Martin para expressar seu interesse em adaptar a série, embora tenha revelado que não a havia lido até aquele ponto. O representante então lhe enviou cópias dos quatro livros publicados até aquela época.[21] Assim que terminou a leitura dos livros, Benioff contatou D. B. Weiss para sugerir uma adaptação para a televisão.[22] Após uma reunião de cinco horas com Martin em um restaurante no Santa Monica Boulevard para discutir sua proposta e compartilhar ideias sobre As Crónicas de Gelo e Fogo - que incluiu a análise de uma hipótese sobre a identidade da mãe de Jon Snow - Benioff e Weiss obtiveram permissão para a adaptarem para uma série.</p>
+
+<figure>
+<img src="./asserts/img/game-of-thrones.png" alt="Brasao que aparece na abertura da serie de Tv">
+<figcaption>Brasao que aparece na abertura da Serie de Tv</figcaption>
+</figure>
+
         </div>
+
+        
 
         <div class="anchors">
             <h2>Neste Artigo</h2>
