Coin to yout witcher

--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Principal</title>
-    <link rel="stylesheet" href="asserts/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
     <div>   
         <div class="logo">
 
-            <img src="asserts/img/wikipedia.png" width="100"/>
-=======
+
             <h1>
                 Wikipedia
             <img src="assets/img/wikipedia.png" width="50"style="float: left;"/>
@@ -27,7 +26,7 @@
 
     <div class="content">
         <div class="sidebar">
-            <h2>Filmes e Series</h2>
+            <h2 >Filmes e Series</h2>
             <ul>
                 <li><a href="#">Game of Thrones</a></li>
             </ul>
@@ -47,12 +46,11 @@
             <p>Em janeiro de 2006, David Benioff revelou que desde pequeno se considerava fã de ficção fantástica, e puxou conversa por telefone com o representante de Martin para expressar seu interesse em adaptar a série, embora tenha revelado que não a havia lido até aquele ponto. O representante então lhe enviou cópias dos quatro livros publicados até aquela época.[21] Assim que terminou a leitura dos livros, Benioff contatou D. B. Weiss para sugerir uma adaptação para a televisão.[22] Após uma reunião de cinco horas com Martin em um restaurante no Santa Monica Boulevard para discutir sua proposta e compartilhar ideias sobre As Crónicas de Gelo e Fogo - que incluiu a análise de uma hipótese sobre a identidade da mãe de Jon Snow - Benioff e Weiss obtiveram permissão para a adaptarem para uma série.</p>
 
 <figure>
-<img src="./asserts/img/game-of-thrones.png" alt="Brasao que aparece na abertura da serie de Tv">
+<img src="./assets/img/game-of-thrones.png" alt="Brasao que aparece na abertura da serie de Tv">
 <figcaption>Brasao que aparece na abertura da Serie de Tv</figcaption>
 </figure>
 
-            <h1>Game of Thrones</h1>
-            <p></p>
+          
             
 
         </div>
